# noir

./: .ameba.yml  .dockerignore  .gitattributes  .gitignore  404.html  AGENTS.md  AI.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.ko.md  README.md  Rakefile  SECURITY.md  TEST_COVERAGE.md  _typos.toml  action.yml  default.nix  flake.nix  go.mod  go.sum  goyo.js  hono_test.js  index.html  install.js  install.sh  justfile  llms-full.txt  llms.txt  main.go  manifest.json  noir.sln  package-lock.json  package.json  plan.md  robots.txt  rss.xml  search.json  search_index.en.js  (+9 more)
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml  labeler.yml
.well-known/: security.txt
aur/: PKGBUILD
authors/: index.html
blog/: index.html
cmd/: detect.go  root.go  version.go
community/: index.html
css/: main.css  style.css
development/: index.html
docs/: AGENTS.md  Gemfile  JAPANESE_TRANSLATION_TEMPLATE.md  _config.yml  config.toml  go.mod  go.sum  hugo.toml  index.md  introdution.md
get_started/: index.html
github-action/: Dockerfile  README.md  entrypoint.sh  resolve-image-tag.sh  test-entrypoint.sh  test-resolve-image-tag.sh
issues/: 757.md
js/: codeblock.js  copy_heading_link.js  mermaid.js  search.js  sidebar.js  toc.js
ko/: atom.xml  index.html  rss.xml
logos/: site.webmanifest
nix/: README.md  overlay.nix
og-images/: .og_manifest.json
resoruces/: index.html
resources/: index.html
spec/functional_test/fixtures/rust/rocket/: Cargo.toml
spec/functional_test/fixtures/rust/rocket/src/: main.rs  main_enhanced.rs
(+4934 files in other folders)
